tests/parser/matlab_2021a_name_value_pairs/nv_pair_3.m.out
In nv_pair_3.m, line 3
| plot(x,y,Color="red","LineWidth",2);
|                      ^^^^^^^^^^^ error: positional argument is not permitted after a name-value pair
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
