tests/parser/matlab_2021a_name_value_pairs/nv_pair_3.m
% Example taken from the 2021a release notes

plot(x,y,Color="red","LineWidth",2);

% All name=value arguments must appear after the name,value
% arguments. This is an example that should error.
